tests/macro-tests/cases/widget_new/malformed_property_path1.stderr
error: expected identifier, found keyword `_`
 --> cases/widget_new/malformed_property_path1.rs:6:9
  |
6 |         _ = 0;
  |         ^
