tests/macro-tests/cases/widget_new/malformed_property_path1.rs
use zng::{APP, widget::Wgt};

fn main() {
    let _scope = APP.minimal();
    #[rustfmt::skip]
    let _ = Wgt! {
        _ = 0;
    };
}
